// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utilities with a single query can check propTypes for fragments 1`] = `
Array [
  "Warning: Failed prop type: alias missing on {}",
]
`;

exports[`utilities with a single query can check propTypes for fragments with variables 1`] = `
Array [
  "Warning: Failed prop type: avatar missing on {\\"alias\\":\\"Bob\\",\\"height\\":1.89}",
]
`;
